# hilfer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  railpack.json  requirements.txt
src/hilfer/: __init__.py  config.py  google_sheets.py  main.py  market_data.py  models.py
tests/: test_config.py  test_google_sheets.py  test_main.py  test_market_data.py
