[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hilfer"
version = "0.1.0"
description = "Railway cron worker for refreshing Google Sheets market data from Finnhub."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "gspread>=6.2.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
hilfer = "hilfer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
